--- a/src/Club/WelcomeBundle/Resources/views/Welcome/blog.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/blog.html.twig
@@ -1,15 +1,18 @@
-<h3 class="tit">{{ post.title }}</h3>
+<h3 class="tit"><a href="{{ path('club_welcome_blog_show', {'blog_id':post.id}) }}">{{ post.title }}</a></h3>
+
 <p><span class="label label-02">{% trans with {'%date%':post.createdAt|club_datetime,'%author%':post.user.name} %}Posted on %date% by %author%.{% endtrans %}</span></p>
 
 {% if post.user == app.user %}
 {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_welcome_blog_edit', {'id':post.id})} %}
 {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_welcome_blog_delete', {'id':post.id})} %}
-{% include "ClubLayoutBundle:Default:comment_link.html.twig" with {'url':path('club_welcome_blog_comment', {'blog_id':post.id})} %}
 {% endif %}
 
+{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+{% include "ClubLayoutBundle:Default:comment_link.html.twig" with {'url':path('club_welcome_blog_comment', {'blog_id':post.id})} %}
+{% endif %}
 <p>{{ post.message|raw }}</p>
 
-<h4>Comments</h4>
+<i>{% trans with {'%comments%':post.comments|length} %}There are %comments% for this post.{% endtrans %}</i>
 {% for comment in post.comments %}
 <p><span class="label label-02">{% trans with {'%date%':comment.createdAt|club_datetime,'%author%':comment.user.name} %}Posted on %date% by %author%.{% endtrans %}</span></p>
 <p>{{ comment.comment|raw }}</p>
