--- a/src/Club/WelcomeBundle/Resources/views/Blog/show.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/show.html.twig
@@ -14,7 +14,7 @@
 {% endif %}
 <p>{{ blog.message|raw }}</p>
 
-<h4>Comments</h4>
+<h4>{% trans %}Comments{% endtrans %}</h4>
 {% for comment in blog.comments %}
 <p><span class="label label-03">{% trans with {'%date%':comment.createdAt|club_datetime,'%author%':comment.user.name} %}Posted on %date% by %author%.{% endtrans %}</span></p>
 <p>{{ comment.comment|raw }}</p>
