Added plugin friendly payment handling.

--- a/src/Club/Payment/CashBundle/Resources/views/Cash/index.html.twig
+++ b/src/Club/Payment/CashBundle/Resources/views/Cash/index.html.twig
@@ -1,1 +1,5 @@
-Hello {{ name }}!
+{% extends "ClubShopBundle::base.html.twig" %}
+
+{% block body %}
+{{ order.paymentmethod.successPage|raw }}
+{% endblock %}
