--- a/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/edit.html.twig
@@ -1,5 +1,8 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
+{% block javascripts %}
+  {% include "ClubLayoutBundle:Default:tinymce.html.twig" %}
+{% endblock %}
 
 {% block body %}
 
