Added submit button to quickpay form.

--- a/src/Club/Payment/QuickpayBundle/Resources/views/Quickpay/index.html.twig
+++ b/src/Club/Payment/QuickpayBundle/Resources/views/Quickpay/index.html.twig
@@ -2,8 +2,10 @@
 
 {% block body %}
 
-<form method="POST" action="">
+<form method="POST" action="{{ quickpay_url }}">
 {{ form_widget(form) }}
+
+{% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
 </form>
 
 {% endblock %}
