--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -48,7 +48,7 @@
         {% include "ClubLayoutBundle:Default:ban_link.html.twig" with {'url':path('admin_user_ban', { 'id':user.id })} %}
         {% include "ClubLayoutBundle:Default:note_link.html.twig" with {'url':path('admin_user_note', { 'id':user.id })} %}
         {% include "ClubLayoutBundle:Default:shop_as_link.html.twig" with {'url':path('club_user_adminuser_shop', { 'id':user.id })} %}
-        {% include "ClubLayoutBundle:Default:participant_link.html.twig" with {'url':path('club_team_adminparticipant_participant', { 'user_id':user.id })} %}
+        {% include "ClubLayoutBundle:Default:checkin_link.html.twig" with {'url':path('club_checkin_admincheckin_checkin', { 'user_id':user.id })} %}
       </td>
     </tr>
   {% else %}
