--- a/src/Club/LayoutBundle/Resources/views/Default/copy_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/copy_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/ico-list.gif') }}" class="ico" alt="{% trans %}Copy{% endtrans %}" title="{% trans %}Copy{% endtrans %}" /></a>
+<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16x16/page_copy.png') }}" class="ico" alt="{% trans %}Copy{% endtrans %}" title="{% trans %}Copy{% endtrans %}" /></a>
