--- a/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
@@ -39,6 +39,7 @@
       <td>
         {% if not message.ready %}
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_message_adminmessage_edit', {'id':message.id})} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_message_adminmessage_delete', {'id':message.id})} %}
         {% else %}
         {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_message_adminmessage_show', {'id':message.id})} %}
         {% include "ClubLayoutBundle:Default:copy_link.html.twig" with {'url':path('club_message_adminmessage_copy', {'id':message.id})} %}
