--- a/src/Club/BookingBundle/Resources/views/Overview/view.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/view.html.twig
@@ -4,7 +4,7 @@
 <h2>{% trans %}Booking{% endtrans %}</h2>
 {% include "ClubBookingBundle:Overview:information.html.twig" %}
 
-{% if (is_granted('IS_AUTHENTICATED_FULLY')) and interval.available and app.user.memberStatus %}
+{% if (is_granted('IS_AUTHENTICATED_FULLY')) and interval.available and active %}
   {% include "ClubBookingBundle:Overview:book_form.html.twig" %}
 
 {% endif %}
