--- a/src/Club/ShopBundle/Resources/views/Subscription/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/index.html.twig
@@ -7,6 +7,9 @@
 <h2>{% trans %}Active subscriptions{% endtrans %}</h2>
 {% include "ClubShopBundle:Subscription:subscription_table.html.twig" with {'subscriptions':active} %}
 
+<h2>{% trans %}Coming subscriptions{% endtrans %}</h2>
+{% include "ClubShopBundle:Subscription:subscription_table.html.twig" with {'subscriptions':coming} %}
+
 <h2>{% trans %}Expired subscriptions{% endtrans %}</h2>
 {% include "ClubShopBundle:Subscription:subscription_table.html.twig" with {'subscriptions':expired} %}
 
