--- a/src/Club/Payment/QuickpayBundle/Resources/views/Quickpay/index.html.twig
+++ b/src/Club/Payment/QuickpayBundle/Resources/views/Quickpay/index.html.twig
@@ -15,12 +15,10 @@
 <input size="40" type="hidden" id="cancelurl" name="cancelurl" value="{{ form.cancelurl.vars.value }}" />
 <input size="40" type="hidden" id="callbackurl" name="callbackurl" value="{{ form.callbackurl.vars.value }}" />
 <input size="40" type="hidden" id="autocapture" name="autocapture" value="{{ form.autocapture.vars.value }}" />
-<input size="40" type="hidden" id="autofee" name="autofee" value="{{ form.autofee.vars.value }}" />
 <input size="40" type="hidden" id="cardtypelock" name="cardtypelock" value="{{ form.cardtypelock.vars.value }}" />
-<input size="40" type="hidden" id="description" name="description" value="{{ form.description.vars.value }}" />
 <input size="40" type="hidden" id="testmode" name="testmode" value="{{ form.testmode.vars.value }}" />
 <input size="40" type="hidden" id="splitpayment" name="splitpayment" value="{{ form.splitpayment.vars.value }}" />
-<input size="40" type="hidden" id="secret" name="secret" value="{{ form.secret.vars.value }}" />
+<input size="40" type="hidden" id="md5check" name="md5check" value="{{ form.md5check.vars.value }}" />
 <input size="40" type="hidden" id="ipaddress" name="ipaddress" value="{{ form.ipaddress.vars.value }}" />
 
 {% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'button':'Pay with creditcard'} %}
