Fixed footer on members list.

--- a/src/Club/UserBundle/Resources/views/Member/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Member/index.html.twig
@@ -29,7 +29,7 @@
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="2"></td>
+      <td colspan="2">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
