--- a/src/Club/MailBundle/Resources/views/Template/booking_cancel.html.twig
+++ b/src/Club/MailBundle/Resources/views/Template/booking_cancel.html.twig
@@ -11,7 +11,7 @@ Field:  {{ booking.field }}
 Partner: Guest
 {% else %}
   {% for partner in booking.users %}
-Partner: partner.profile.name
+Partner: {{ partner.profile.name }}
   {% endfor %}
 {% endif %}
 
