Changed booking plan from date to time.

--- a/src/Club/BookingBundle/Resources/views/AdminPlan/form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/form.html.twig
@@ -7,10 +7,10 @@
   {{ form_row(form.day) }}
   <span class="smaller low">{% trans %}Info: What day on the week should the plan be booked?{% endtrans %}</span>
 
-  {{ form_row(form.first_date) }}
+  {{ form_row(form.first_time) }}
   <span class="smaller low">{% trans %}Info: What time on the day will the plan be valid from?{% endtrans %}</span>
 
-  {{ form_row(form.end_date) }}
+  {{ form_row(form.end_time) }}
   <span class="smaller low">{% trans %}Info: What time on the day will the plan end?{% endtrans %}</span>
 
   {{ form_row(form.fields) }}
