--- a/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
@@ -25,7 +25,7 @@
       <td>{{ plan.planCategory.name }}</td>
       <td>{{ plan.periodStart|club_datetime }}</td>
       <td>{{ plan.periodEnd|club_datetime }}</td>
-      <td>{{ plan.firstDate|club_time }} - {{ plan.endDate|club_time }}</td>
+      <td>{{ plan.firstTime|club_time }} - {{ plan.endTime|club_time }}</td>
       <td>{{ plan.day|club_day }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_booking_adminplan_edit', { 'plan_category_id':plan.planCategory.id, 'id':plan.id })} %}
