--- a/src/Club/UserBundle/Resources/views/Filter/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/Filter/form.html.twig
@@ -1,5 +1,5 @@
 <!-- Submit -->
-<div id="search_box" class="box-01 box">
+<div id="search_box">
   <p>{% trans %}This is your current working filter.{% endtrans %}</p>
   <form method="post" action="{{ path('club_user_filter_change') }}">
   {{ form_row(form_filters.filter) }}
