Added export from users.

--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -15,6 +15,7 @@
 </div>
 
 <div>
+[ <a href="{{ path('club_user_adminuser_csv') }}">{% trans %}Export CSV{% endtrans %}</a> ]
 <form method="post" action="{{ path('admin_user_batch') }}">
 <table class="style">
   <thead>
