Added some more style, text and translation.

--- a/src/Club/Payment/QuickpayBundle/Resources/views/Quickpay/cancel.html.twig
+++ b/src/Club/Payment/QuickpayBundle/Resources/views/Quickpay/cancel.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
 
-<p>Your cancel has been cancelled.</p>
+<h2>{% trans %}Payment{% endtrans %}</h2>
+<p>{% trans %}Your payment has been cancelled.{% endtrans %}</p>
 
 {% endblock %}
