--- a/src/Club/Payment/QuickpayBundle/Resources/views/Quickpay/success.html.twig
+++ b/src/Club/Payment/QuickpayBundle/Resources/views/Quickpay/success.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
 
-<p>Your order is now paid.</p>
+<h2>{% trans %}Payment{% endtrans %}</h2>
+<p>{% trans %}Your payment was accepted.{% endtrans %}</p>
 
 {% endblock %}
