--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -21,9 +21,10 @@
   <thead>
     <tr>
       <th>[x]</th>
-      <th>{% trans %}Number{% endtrans %}</th>
-      <th>{% trans %}Name{% endtrans %}</th>
-      <th>{% trans %}Created at{% endtrans %}</th>
+
+      {% include "ClubUserBundle:AdminUser:field.html.twig" with {'field_name':'member_number', 'field_text':'Number'|trans} %}
+      {% include "ClubUserBundle:AdminUser:field.html.twig" with {'field_name':'first_name', 'field_text':'Name'|trans} %}
+      {% include "ClubUserBundle:AdminUser:field.html.twig" with {'field_name':'created_at', 'field_text':'Created at'|trans} %}
       <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
