--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <p class="box">
-  <a href="{{ path('club_payment_cash_cash_register', {'order_id':order.id}) }}" class="btn-info"><span>{% trans %}Register Payment{% endtrans %}</span></a>
+  <a href="{{ path('club_payment_cash_cash_register', {'order_id':order.id}) }}" class="btn-info"><span>{% trans %}Register payment{% endtrans %}</span></a>
 </p>
 
 <h2>{% trans %}Order Information{% endtrans %}</h2>
