Made it easier to add booking plan.

--- a/src/Club/BookingBundle/Resources/views/Overview/book_plan_form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/book_plan_form.html.twig
@@ -1,5 +1,5 @@
 <fieldset>
-  <form method="post" action="{{ path('club_booking_adminplancategory_new') }}">
+  <form method="get" action="{{ path('club_booking_adminplancategory_new1', {'date':date|date('Y-m-d'),'interval_id':interval.id}) }}">
     <legend>{% trans %}Booking plan{% endtrans %}</legend>
 
     <p>{% trans %}Click here if you want to create a booking plan.{% endtrans %}</p>
