--- a/src/Club/UserBundle/Resources/views/AdminUser/header.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/header.html.twig
@@ -3,4 +3,5 @@
   <a href="{{ path('admin_shop_subscription', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Subscription{% endtrans %}</span></a>
   <a href="{{ path('admin_user_group', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Group{% endtrans %}</span></a>
   <a href="{{ path('admin_user_note', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Notes{% endtrans %}</span></a>
+  <a href="{{ path('club_user_adminuser_shop', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Shop as{% endtrans %}</span></a>
 </p>
