--- a/src/Club/UserBundle/Resources/views/AdminGroup/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/index.html.twig
@@ -20,7 +20,7 @@
     <tr>
       <td>{{ group.groupName }} ( {{ group.users|length }} )</td>
       <td>
-        {% include "ClubLayoutBundle:Default:group_link.html.twig" with {'url':path('club_user_group_members', { 'id':group.id })} %}
+        {% include "ClubLayoutBundle:Default:group_link.html.twig" with {'url':path('club_user_admingroup_members', { 'id':group.id })} %}
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_group_edit', { 'id':group.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_group_delete', { 'id':group.id })} %}
       </td>
