Added create group button.

--- a/src/Club/UserBundle/Resources/views/AdminGroup/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/edit.html.twig
@@ -4,7 +4,7 @@
 <h2>{% trans %}Group{% endtrans %}</h2>
 
 <form method="post" action="{{ path('admin_group_edit', {'id':group.id}) }}">
-{% include "ClubUserBundle:Group:form.html.twig" with {'form': form} %}
+{% include "ClubUserBundle:AdminGroup:form.html.twig" with {'form': form} %}
 </form>
 
 {% endblock %}
