Made dynamic admin dashboard.

--- a/src/Club/DashboardBundle/Resources/views/AdminDashboard/index.html.twig
+++ b/src/Club/DashboardBundle/Resources/views/AdminDashboard/index.html.twig
@@ -2,8 +2,6 @@
 
 {% block body %}
 
-{% include "ClubDashboardBundle:AdminDashboard:order_table.html.twig" %}
-{% include "ClubDashboardBundle:AdminDashboard:user_table.html.twig" %}
-{% include "ClubDashboardBundle:AdminDashboard:log_table.html.twig" %}
+{{ output|raw }}
 
 {% endblock %}
