--- a/src/Club/BookingBundle/Resources/views/AdminPlan/form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/form.html.twig
@@ -1,3 +1,7 @@
+  {{ form_row(form.name) }}
+
+  {{ form_row(form.description) }}
+
   {{ form_row(form.period_start) }}
   <span class="smaller low">{% trans %}Info: When is the first date the plan will be valid from?{% endtrans %}</span>
 
