--- a/src/Club/BookingBundle/Resources/views/Booking/viewPlan.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/viewPlan.html.twig
@@ -10,7 +10,7 @@
     <p><label>{% trans %}Date{% endtrans %}</label>{{ date|club_date }}</p>
     <p><label>{% trans %}Time{% endtrans %}</label>{{ plan.firstTime|club_time }} - {{ plan.endTime|club_time }}</p>
     <p><label>{% trans %}Field{% endtrans %}</label>{{ field.name }}</p>
-    <p><label>{% trans %}Plan{% endtrans %}</label>{{ plan.planCategory.name }}</p>
+    <p><label>{% trans %}Plan{% endtrans %}</label>{{ plan.name }}</p>
 
     {% if field.information %}
       <h3>{% trans %}Information{% endtrans %}</h3>
@@ -18,7 +18,7 @@
     {% endif %}
 
     <h3>{% trans %}Description{% endtrans %}</h3>
-    <p>{{ plan.planCategory.description }}</p>
+    <p>{{ plan.description }}</p>
   </div>
 </fieldset>
 
