--- a/src/Club/BookingBundle/Resources/views/Overview/book_form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/book_form.html.twig
@@ -1,39 +1,4 @@
-{% block javascripts %}
-
-<script type="text/javascript">
-  var url = "{{ path('homepage') }}";
-
-  $(document).ready(function() {
-    $( "#booking_query" ).autocomplete({
-      source: function( request, response ) {
-        $.ajax({
-          url: url + "api/users/search/" + $("#booking_query").attr("value"),
-          dataType: "json",
-          success: function( data ) {
-            response( $.map( data.data, function( item ) {
-              return {
-                label: item.first_name + " " + item.last_name,
-                value: item.first_name + " " + item.last_name,
-                id: item.id
-              }
-            }));
-          }
-        });
-      },
-      minLength: 2,
-      select: function( event, ui ) {
-        $("#booking_id").attr("value", ui.item.id);
-      },
-      open: function() {
-        $( this ).removeClass( "ui-corner-all" ).addClass( "ui-corner-top" );
-      },
-      close: function() {
-        $( this ).removeClass( "ui-corner-top" ).addClass( "ui-corner-all" );
-      }
-    });
-  });
-</script>
-{% endblock %}
+{% include "ClubLayoutBundle:Default:ajax_user.html.twig" with {'search_field':'#booking_query', 'input_id':'#booking_id'} %}
 
 <fieldset>
   <form method="post" action="{{ path('club_booking_booking_review', {'interval_id':interval.id, 'date':date|date('Y-m-d')}) }}">
